--- a/src/app/components/sections/saved-jobs/saved-jobs.component.html
+++ b/src/app/components/sections/saved-jobs/saved-jobs.component.html
@@ -229,4 +229,23 @@
       </li>
     </ul>
   </nav>
+
+  <!-- Remove Confirmation Modal -->
+  <div class="modal fade" id="removeModal" tabindex="-1" aria-labelledby="removeModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="removeModalLabel">Remove Saved Job</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          Are you sure you want to remove this job from your saved jobs?
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+          <button type="button" class="btn btn-danger" id="confirmRemoveBtn" (click)="confirmRemove()">Remove</button>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
