fix(saved-jobs): Fix dynamic sorting in saved jobs component by adding change event handler to select element

--- a/src/app/components/sections/saved-jobs/saved-jobs.component.html
+++ b/src/app/components/sections/saved-jobs/saved-jobs.component.html
@@ -7,7 +7,7 @@
       <div class="d-flex justify-content-md-end">
         <div class="sort-container">
           <label class="sort-label me-2">{{ sortLabel }}:</label>
-          <select class="form-select sort-select" [(ngModel)]="selectedSort">
+          <select class="form-select sort-select" [(ngModel)]="selectedSort" (change)="onSortChange()">
             <option *ngFor="let option of sortOptions" [value]="option.value">
               {{ option.label }}
             </option>
